중고 거래 어플리케이션(패스트캠퍼스 실습용)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.carrotmarketclone">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CarrotMarketClone">
-        <activity android:name=".home.AddArticleActivity"></activity>
+        <activity android:name=".chatdetail.ChatRoomActivity"></activity>
+        <activity android:name=".home.AddArticleActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
